--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,31 +1,31 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>
-      CSV Data
-    </ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="downloadCSV()">
-         <ion-icon name="download"></ion-icon>
-       </button>
-    </ion-buttons>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>
+            CSV Data
+        </ion-title>
+        <ion-buttons end>
+            <ion-button color="primary" (click)="runKnn()">treinar KNN</ion-button>
+        </ion-buttons>
+    </ion-toolbar>
 </ion-header>
- 
-<ion-content padding>
-	<!--
-    <table border="1" class="data-table">
-      <tr>
-        <td *ngFor="let header of headerRow" text-center><b>{{ header }}</b></td>
-      </tr>
-      <tr *ngFor="let row of csvData; let i = index">
-        <td *ngFor="let data of row; let j = index; trackBy: trackByFn">
-          <ion-input type="text" [(ngModel)]="csvData[i][j]"></ion-input>
-        </td>
-      </tr>
-    </table>
-	-->
-	
 
+<ion-content padding>
+
+    <table border="1" class="data-table">
+        <tr>
+            <th *ngFor="let data of headerRow; let i = index" text-center>
+                {{data}}
+            </th>
+        </tr>
+        <tr *ngFor="let row of treino_x; let i = index">
+            <td *ngFor="let data of row; let j = index; trackBy: trackByFn">
+                <ion-input type="text" [(ngModel)]="data"></ion-input>
+            </td>
+        </tr>
+    </table>
+
+
+    <!--
     <table border="1" class="data-table">
 
       <tr>
@@ -34,8 +34,7 @@
         </td>
       </tr>
     </table>
+-->
 
-	
-	
+
 </ion-content>
-
